fixed z-index for autocomplete list

--- a/src/components/Pages/HomePage/CitySuggestionList/CitySuggestionList.scss
+++ b/src/components/Pages/HomePage/CitySuggestionList/CitySuggestionList.scss
@@ -2,7 +2,7 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    z-index: 1000;
+    z-index: 10000;
     box-shadow: 0 1rem 1rem rgba(#000, .1);
  
     width: 50%;
